# ddgr_skill

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.demo/: demo.py  demo2.py  output.md
ddgr_skill/: __init__.py  __main__.py  claude_skill.md  cli.py  exceptions.py  fetcher.py  hermes_skill.md  output.py  search.py
ddgr_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
install/: install_ddgr_skill.sh  test_hermes_remote.sh
skills/ddgr-skill/: SKILL.md
skills/ddgr-skill/hermes/: SKILL.md
tests/: conftest.py  test_cli.py  test_fetcher.py  test_integration.py  test_output.py  test_search.py
