[project]
name = "ddgr-skill"
version = "0.1.0"
description = "CLI tool for web search via ddgr and page content fetching"
requires-python = ">=3.12"
dependencies = [
      "beautifulsoup4>=4.12.0",
      "httpx>=0.27.0",
      "markdownify>=0.13.0",
]

[project.scripts]
ddgr-skill = "ddgr_skill.cli:main"

[tool.setuptools.packages.find]
include = ["ddgr_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*"
python_files = "test_*.py"
markers = [
      "integration: integration tests (skip with -m not-integration)"
]

[tool.uv]
dev-dependencies = [
      "pytest>=8.0",
      "pytest-cov>=5.0",
      "pytest-mock>=3.14",
]
