[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddgr-skill"
version = "0.1.0"
description = "CLI tool for web search via ddgr and page content fetching"
readme = "README.md"
license = "MIT"
authors = [{ name = "Niels Stig Hansen" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "h2>=4.3.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
]

[project.scripts]
ddgr-skill = "ddgr_skill.cli:main"

[project.urls]
Homepage = "https://github.com/nsh1999/ddgr_skill"
Repository = "https://github.com/nsh1999/ddgr_skill"

[tool.setuptools.packages.find]
include = ["ddgr_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*"
python_files = "test_*.py"
markers = [
    "integration: integration tests (skip with -m not-integration)"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
